export interface BaseEntity
{
    id:Number
    error:Object
    result:any

}

